# ic-http-lb

./: .gitignore  Cargo.toml  Dockerfile  README.md  backends.yaml  build-linux.sh  config.yaml  run-tests.sh
.github/workflows/: build.yml  test.yml
deploy/: ic-http-lb.env  ic-http-lb.service
src/: api.rs  backend.rs  cli.rs  core.rs  log.rs  main.rs  metrics.rs  routing.rs  tls.rs
src/middleware/: metrics.rs  request_id.rs
