[package]
name = "ic-http-lb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = "0.10.0"
bytes = "1.10.0"
clap = { version = "4.5.20", features = ["derive", "string", "env"] }
derive-new = "0.7.0"
fqdn = { version = "0.4.6", features = ["serde"] }
hostname = "0.4.0"
http = "1.3.1"
humantime = "2.2.0"
ic-bn-lib = { git = "https://github.com/dfinity/ic-bn-lib", rev = "4bcffff60e25336644622578757d1afb0c317a86", features = [
    "cert-providers",
    "clients-hyper",
    "acme-alpn",
    "vector",
] }
itertools = "0.14.0"
prometheus = "0.14.0"
serde = "1.0"
serde_yaml_ng = "0.10"
tikv-jemallocator = "0.6.0"
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tower = { version = "0.5.1", features = ["limit"] }
tower-http = { version = "0.6.1", features = ["cors", "compression-full"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
] }
url = { version = "2.5.3", features = ["serde"] }
serde_json = "1.0.140"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
